--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
 								<h2 data-region="ring"></h2>
 								<ul>
 									<li data-zone="ember"></li>
+									<li data-zone="draconis"></li>
 								</ul>
 								<h2 data-region="heart"></h2>
 								<ul>
