Account tabs order, more minis categories

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	
 	<!-- Web application files -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20170502A"></script>
+	<script type="text/javascript" src="data/general.js?v=20170504"></script>
 	<script type="text/javascript" src="data/sale.js?v=20170502"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
@@ -135,7 +135,7 @@
 						<kbd id="tmlToggle" class="btnWindow btnToggle" title="<dfn>Toggle timeline</dfn>. To hide permanently, right click on the map and choose &quot;Toggle HUD&quot;."><var id="tmlTitle"></var></kbd>
 						<div id="tmlContainer">
 							<kbd id="tmlOpaque" class="btnWindow btnOpaque" title="<dfn>Toggle timeline opacity</dfn>"></kbd>
-							<kbd id="tmlCondense" class="btnWindow btnVertical" title="<dfn>Condense timeline</dfn> or show all lines again."></kbd>
+							<kbd id="tmlCondense" class="btnWindow btnVertical" title="<dfn>Condense timeline</dfn> or show all rows again."></kbd>
 							<div id="tmlIndicator"><div id="tmlIndicatorTime"></div></div>
 							<div id="tmlBisector"></div>
 						</div>
