--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	
 	<!-- Web application files -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20170506"></script>
-	<script type="text/javascript" src="data/sale.js?v=20170506"></script>
+	<script type="text/javascript" src="data/general.js?v=20170507"></script>
+	<script type="text/javascript" src="data/sale.js?v=20170507"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -145,9 +145,9 @@
 			<div id="mapCoordinatesBar" class="mapCoordinatesBar">
 				<kbd id="mapCoordinatesToggle" class="btnWindow btnToggle mapCoordinatesToggle" title="<dfn>Toggle Coordinates Bar</dfn>"></kbd>
 				<time id="mapTime" class="mapTime"></time><br />
-				<input id="mapCoordinatesMouse" type="text" />
-				<input id="mapCoordinatesCopy" type="text" />
-				<input id="mapCoordinatesName" class="mapCoordinatesName" type="text" />
+				<input id="mapCoordinatesMouse" class="cssInputText" type="text" />
+				<input id="mapCoordinatesCopy" class="cssInputText" type="text" />
+				<input id="mapCoordinatesName" class="cssInputText mapCoordinatesName" type="text" />
 			</div>
 			<div class="hudPeripheral hudPeripheralNorth">
 				<div class="hudItem">
@@ -318,7 +318,7 @@
 							<label class="cssHidden"><input id="opt_bol_condenseTimelineHeader" type="checkbox" /></label>
 							<label><img data-src="img/map/floor.png" /><input id="opt_int_setFloor" class="optSlider" type="range" min="0" max="3" step="1" title="Set map floor level.<br />Example: Verdant Brink has multiple floors." /></label>
 							<label title="Show/Hide region-colored borders over zones."><img data-src="img/map/border.png" /><input id="opt_bol_showZoneBorders" type="checkbox" /> Show zone borders</label>
-							<label title="Show/Hide gateways, wallows, tunnels, thermal tubes, and launch pads."><img data-src="img/map/gateway_interborders.png" /><input id="opt_bol_showZoneGateways" type="checkbox" /> Show zone gateways</label>
+							<label title="Show/Hide:<br /><img src='img/map/gateway_interborders.png' /> Gateways, asura gates<br /><img src='img/map/gateway_intrazones.png' /> Tunnels, wallows<br /><img src='img/map/launchpad.png' /> Launch pads, thermal tubes<br /><img src='img/map/powerup.png' /> Powerups"><img data-src="img/map/gateway_interborders.png" /><input id="opt_bol_showZoneGateways" type="checkbox" /> Show zone gateways</label>
 							<label title="Show/Hide the colored chain paths of world bosses."><img data-src="img/map/path_chains.png" /><input id="opt_bol_showChainPaths" type="checkbox" /> Show boss paths</label>
 							<label title="Automatically scroll the map to the next predicted world boss event."><img data-src="img/map/pin_green.png" /><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
 							<label title="Color of the personal path and world completion route."><input id="opt_str_colorPersonalPath" type="text" maxlength="32" style="width:96px;"> Path Color</label>
@@ -528,9 +528,9 @@
 			<div id="wvwCoordinatesBar" class="mapCoordinatesBar">
 				<kbd id="wvwCoordinatesToggle" class="btnWindow btnToggle mapCoordinatesToggle" title="<dfn>Toggle Coordinates Bar</dfn>"></kbd>
 				<time id="wvwTime" class="mapTime"></time><br />
-				<input id="wvwCoordinatesMouse" type="text" />
-				<input id="wvwCoordinatesCopy" type="text" />
-				<input id="wvwCoordinatesName" class="mapCoordinatesName" type="text" />
+				<input id="wvwCoordinatesMouse" class="cssInputText" type="text" />
+				<input id="wvwCoordinatesCopy" class="cssInputText" type="text" />
+				<input id="wvwCoordinatesName" class="cssInputText mapCoordinatesName" type="text" />
 			</div>
 			<div class="hudPeripheral hudPeripheralNorth">
 				<div class="hudItem">
