Completion input column ID

--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
 					<div class="hudPopup cntComposition">
 						<div class="wvwOptionsSide1 cssColumn">
 							<label title="Show/Hide all icons listed below.<br />Will increase initial site load time if enabled."><img data-src="img/map/completion.png" /><input id="opt_bol_showWorldCompletionWvW" type="checkbox" /> Show completion</label>
-							<div id="wvwOptionsCompletion" class="mapDisplayCompletion">
+							<div id="wvwDisplayCompletion" class="mapDisplayCompletion">
 								<label><img data-src="img/ui/question.png" /><input id="opt_bol_showZoneOverviewWvW" type="checkbox" /> Zone Overview</label>
 								<label><img data-src="img/map/scope.png" /><input id="opt_bol_displaySectorsWvW" type="checkbox" /> Sector Names</label>
 								<label><img data-src="img/map/waypoint_h.png" /><input id="opt_bol_displayWaypointsWvW" type="checkbox" /> Waypoints</label>
