--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
 							<label title="Show/Hide the colored chain paths of world bosses."><img data-src="img/map/path_chains.png" /><input id="opt_bol_showChainPaths" type="checkbox" /> Show boss paths</label>
 							<label title="Automatically scroll the map to the next predicted world boss event."><img data-src="img/map/pin_green.png" /><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
 							<label title="Color of the personal path and world completion route."><input id="opt_str_colorPersonalPath" type="text" maxlength="32" style="width:96px;"> Path Color</label>
+							<label title="Opacity of the personal path and world completion route."><input id="opt_int_opacityPersonalPath" type="number" min="10" max="100" step="1" /> Path Opacity (%)</label>
 							<br />
 							<label title="Show/Hide the side app panel."><img data-src="img/map/panel.png" /><input id="opt_bol_showPanel" type="checkbox" /> Show app panel</label>
 							<label title="App panel on the right or left side of the map?"><img data-src="img/ui/adjust_move.png" /><input id="opt_bol_alignPanelRight" type="checkbox" /> Align panel to the right</label>
