--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<!-- Web application files -->
 	<script type="text/javascript" src="plugins.js"></script>
 	<script type="text/javascript" src="data/general.js?v=20170531"></script>
-	<script type="text/javascript" src="data/sale.js?v=20170602"></script>
+	<script type="text/javascript" src="data/sale.js?v=20170604"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -929,7 +929,7 @@
 					</div>
 					<label title="Show/Hide clock's tick hand."><input id="opt_bol_showSecondHand" type="checkbox" /> Show clock second hand</label>
 					<label title="Show/Hide GW2 official event countdowns and gem sales on the main page."><input id="opt_bol_showDashboard" type="checkbox" /> Show the dashboard</label>
-					<span><ins class="mnu mnu_alarm"></ins> and <ins class="mnu mnu_display"></ins> icons on the map pane can be hovered on for timer alarm and map display options.</span><br />
+					<span><ins class="mnu mnu_alarm"></ins> and <ins class="mnu mnu_display"></ins> icons on the map pane can be clicked on for timer alarm and map display options.</span><br />
 					<br />
 					<h2>Account</h2>
 					<label title="Show/Hide colored borders over items in account banks."><input id="opt_bol_showRarity" type="checkbox" /> Always show rarity on item slots</label>
