Map right click URL, ticket tournament to skirmish

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 							<li id="mapContextToggleCompletion">Toggle world completion</li>
 							<li id="mapContextToggleLock">Toggle zone lock</li>
 							<li id="mapContextToggleFloor">Toggle terrain</li>
+							<li id="mapContextURLCoord">Map URL</li>
 						</ul>
 					</li>
 				</ul>
