--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" media="screen" href="gw2t.css" />
 	
 	<!-- Web application files -->
-	<script type="text/javascript" src="plugins.js"></script>
+	<script type="text/javascript" src="plugins.js?v=20170606"></script>
 	<script type="text/javascript" src="data/general.js?v=20170606"></script>
 	<script type="text/javascript" src="data/sale.js?v=20170606"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
