--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<!-- Web application files -->
 	<script type="text/javascript" src="plugins.js?v=20170606"></script>
 	<script type="text/javascript" src="data/general.js?v=20170615"></script>
-	<script type="text/javascript" src="data/sale.js?v=20170615"></script>
+	<script type="text/javascript" src="data/sale.js?v=20170616"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -488,6 +488,7 @@
 							<li id="wvwContextToggleCompletion">Toggle world completion</li>
 							<li id="wvwContextToggleLock">Toggle zone lock</li>
 							<li id="wvwContextToggleFloor">Toggle terrain</li>
+							<li id="wvwContextURLCoord">Map URL</li>
 						</ul>
 					</li>
 				</ul>
