--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 	<!-- Web application files -->
 	<script type="text/javascript" src="plugins.js?v=20170606"></script>
 	<script type="text/javascript" src="data/general.js?v=20170615"></script>
-	<script type="text/javascript" src="data/sale.js?v=20170616"></script>
+	<script type="text/javascript" src="data/sale.js?v=20170617"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
-	<script type="text/javascript" src="gw2t-min.js?v=20170616"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
+	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
