DB update, Observatory fractal

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	
 	<!-- Web application files -->
 	<script type="text/javascript" src="plugins.js?v=20170606"></script>
-	<script type="text/javascript" src="data/general.js?v=20170725"></script>
+	<script type="text/javascript" src="data/general.js?v=20170726"></script>
 	<script type="text/javascript" src="data/sale.js?v=20170725"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
@@ -390,6 +390,7 @@
 									<li data-zone="straits"></li>
 									<li data-zone="malchor"></li>
 									<li data-zone="cursed"></li>
+									<li data-zone="siren"></li>
 								</ul>
 							</aside>
 							<aside>
