XML markers import, Siren's Landing nodes

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<!-- Meta -->
-	<title>GW2Timer.com - ArenaNet-Recommended GW2 Timer and Overlay</title>
+	<title>GW2Timer.com - ArenaNet-Recommended GW2 Tool</title>
 	<meta charset="utf-8" />
 	<meta name="robots" content="index, follow, noarchive" />
-	<meta name="description" content="Guild Wars 2 Heart of Thorns world boss events timer, API key account viewer, resource nodes completion map, Trading Post tracker, WvW live map." />
+	<meta name="description" content="Guild Wars 2 Path of Fire world boss events timer, API key account viewer, resource nodes completion map, Trading Post tracker, WvW live map overlay." />
 	<meta name="google-site-verification" content="hPcBd74DxlBzpTu6wO6DkIcOVFLu9SOMT-GQ1MI3fbg" />
 	<meta name="msvalidate.01" content="95E5C0E89A8A24688EC00F2A69986A17" />
 
@@ -100,7 +100,7 @@
 							<li id="mapContextCompassList" class="mapContextCompassList jsIgnore"></li>
 						</ul>
 					</li>
-					<li class="itemContextSubmenu" id="mapContextPins"><span>Path</span>
+					<li id="mapContextPins" class="itemContextSubmenu"><span>Path</span>
 						<ul>
 							<li id="mapContextClearPins">Clear</li>
 							<li class="itemContextSubmenu"><span>Load</span>
@@ -468,7 +468,7 @@
 							<li id="wvwContextCompassList" class="mapContextCompassList jsIgnore"></li>
 						</ul>
 					</li>
-					<li class="itemContextSubmenu" id="wvwContextPins"><span>Path</span>
+					<li id="wvwContextPins" class="itemContextSubmenu"><span>Path</span>
 						<ul>
 							<li id="wvwContextClearPins">Clear</li>
 							<li class="itemContextSubmenu"><span>Load</span>
