--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
 								<br />
 								<b class="jsTranslate">Desktop Notifications</b>
 								<label title="If you enable this option, please click on &quot;Allow&quot; when your browser asks for notification permissions."><input id="opt_bol_alertDesktop" type="checkbox" /> Show notification popups</label>
+								<label title="How long before the notification popup auto-closes."><input id="opt_int_secAlertDesktop" type="number" min="3" max="60" step="1" /> Seconds popup duration</label>
 							</div>
 						</div>
 						<div id="mapAlarmSide1" class="cssColumn">
