--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script type="text/javascript" src="data/general.js?v=20170825"></script>
 	<script type="text/javascript" src="data/sale.js?v=20170825"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
-	<script type="text/javascript" src="gw2t-min.js?v=20170825"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
+	<script type="text/javascript" src="gw2t-min.js?v=20170825A"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -244,6 +244,8 @@
 								<b class="jsTranslate">Desktop Notifications</b>
 								<label title="If you enable this option, please click on &quot;Allow&quot; when your browser asks for notification permissions."><input id="opt_bol_alertDesktop" type="checkbox" /> Show notification popups</label>
 								<label title="How long before the notification popup auto-closes."><input id="opt_int_secAlertDesktop" type="number" min="3" max="60" step="1" /> Seconds popup duration</label>
+								<b class="jsTranslate">Speech Notifications</b>
+								<label title="If unchecked, this will permanently mute all spoken alerts. Use the slider to change volume."><input id="opt_bol_alertSpeech" type="checkbox" /> Enable speech sounds</label>
 							</div>
 						</div>
 						<div id="mapAlarmSide1" class="cssColumn">
