Path of Fire zones

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script type="text/javascript" src="data/general.js?v=20170922"></script>
 	<script type="text/javascript" src="data/sale.js?v=20170926"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
-	<script type="text/javascript" src="gw2t-min.js?v=20170922"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
+	<script type="text/javascript" src="gw2t-min.js?v=20170928"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -365,24 +365,6 @@
 						<input id="mapSearch" type="text" />
 						<div id="mapZoneList" class="mapZoneList mapZoneLinks">
 							<aside>
-								<h2 data-region="ring"></h2>
-								<ul>
-									<li data-zone="ember"></li>
-									<li data-zone="draconis"></li>
-								</ul>
-								<h2 data-region="heart"></h2>
-								<ul>
-									<li data-zone="bloodstone"></li>
-									<li data-zone="verdant"></li>
-									<li data-zone="auric"></li>
-									<li data-zone="tangled"></li>
-									<li data-zone="dragon"></li>
-								</ul>
-								<h2 data-region="wastes"></h2>
-								<ul>
-									<li data-zone="dry"></li>
-									<li data-zone="silverwastes"></li>
-								</ul>
 								<h2 data-region="jungle"></h2>
 								<ul>
 									<li data-zone="rata"></li>
@@ -393,12 +375,23 @@
 									<li data-zone="sparkfly"></li>
 									<li data-zone="maelstrom"></li>
 								</ul>
-								<h2 data-region="orr"></h2>
+								<h2 data-region="wastes"></h2>
 								<ul>
-									<li data-zone="straits"></li>
-									<li data-zone="malchor"></li>
-									<li data-zone="cursed"></li>
-									<li data-zone="siren"></li>
+									<li data-zone="dry"></li>
+									<li data-zone="silverwastes"></li>
+								</ul>
+								<h2 data-region="heart"></h2>
+								<ul>
+									<li data-zone="bloodstone"></li>
+									<li data-zone="verdant"></li>
+									<li data-zone="auric"></li>
+									<li data-zone="tangled"></li>
+									<li data-zone="dragon"></li>
+								</ul>
+								<h2 data-region="ring"></h2>
+								<ul>
+									<li data-zone="ember"></li>
+									<li data-zone="draconis"></li>
 								</ul>
 							</aside>
 							<aside>
@@ -414,6 +407,15 @@
 									<li data-zone="southsun"></li>
 									<li data-zone="doric"></li>
 								</ul>
+								<h2 data-region="orr"></h2>
+								<ul>
+									<li data-zone="straits"></li>
+									<li data-zone="malchor"></li>
+									<li data-zone="cursed"></li>
+									<li data-zone="siren"></li>
+								</ul>
+							</aside>
+							<aside>
 								<h2 data-region="shiverpeaks"></h2>
 								<ul>
 									<li data-zone="hoelbrak"></li>
@@ -425,6 +427,8 @@
 									<li data-zone="frostgorge"></li>
 									<li data-zone="bitterfrost"></li>
 								</ul>
+							</aside>
+							<aside>
 								<h2 data-region="ascalon"></h2>
 								<ul>
 									<li data-zone="citadel"></li>
@@ -434,6 +438,14 @@
 									<li data-zone="marches"></li>
 									<li data-zone="blazeridge"></li>
 									<li data-zone="fireheart"></li>
+								</ul>
+								<h2 data-region="desert"></h2>
+								<ul>
+									<li data-zone="oasis"></li>
+									<li data-zone="highlands"></li>
+									<li data-zone="riverlands"></li>
+									<li data-zone="desolation"></li>
+									<li data-zone="vabbi"></li>
 								</ul>
 							</aside>
 						</div>
