PoF currency and skins, directory options search

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script type="text/javascript" src="data/general.js?v=20171004"></script>
 	<script type="text/javascript" src="data/sale.js?v=20171006"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
-	<script type="text/javascript" src="gw2t-min.js?v=20170928"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
+	<script type="text/javascript" src="gw2t-min.js?v=20171008"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -932,6 +932,7 @@
 			<article id="plateOptions" class="jsScrollable">
 				<div class="cntComposition">
 					<header class="cntHeader jsTranslate">Options</header>
+					<div id="optSearch"></div>
 					<br />
 					<label title="Some map features like right clicking are disabled for touchscreens, check this for normal click behavior. Requires reload."><input id="opt_bol_ignoreTouch" type="checkbox" /> Ignore touchscreens (use mouse)</label>
 					<h2>Timer</h2>
