Halloween update, Serpents timer, Petrified nodes

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 	
 	<!-- Web application files -->
 	<script type="text/javascript" src="plugins.js?v=20170606"></script>
-	<script type="text/javascript" src="data/general.js?v=20171013"></script>
+	<script type="text/javascript" src="data/general.js?v=20171015"></script>
 	<script type="text/javascript" src="data/sale.js?v=20171014"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
-	<script type="text/javascript" src="gw2t-min.js?v=20171014"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
+	<script type="text/javascript" src="gw2t-min.js?v=20171015"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -720,7 +720,7 @@
 		==================================================================== -->
 		<section id="paneClock" class="paneApp clkSizeRegular">
 			<div id="paneClockWall" class="clkSizeRegular"></div>
-			<div id="paneClockBackground" class="clkSizeRegular"></div>
+			<div id="paneClockBackground" class="paneClockBackground clkSizeRegular"></div>
 			<div id="paneClockFace" class="clkSizeRegular"></div>
 			<div id="paneClockIcons" class="clkSizeRegular">
 				<img id="clkIconSD0" class="iconSD" src="img/ui/placeholder.png" alt="X:00" />
