--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- Web application files -->
 	<script type="text/javascript" src="plugins.js?v=20170606"></script>
 	<script type="text/javascript" src="data/general.js?v=20171202"></script>
-	<script type="text/javascript" src="data/sale.js?v=20171203"></script>
+	<script type="text/javascript" src="data/sale.js?v=20171205"></script>
 	<script type="text/javascript" src="data/chains.js"></script>
 	<script type="text/javascript" src="gw2t-min.js?v=20171202"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -446,6 +446,7 @@
 									<li data-zone="riverlands"></li>
 									<li data-zone="desolation"></li>
 									<li data-zone="vabbi"></li>
+									<li data-zone="istan"></li>
 								</ul>
 							</aside>
 						</div>
